# basicaf

./: .gitignore  Cargo.toml  README.md  check_bal.py
examples/: collatz.bf  collatz.db  fib.bf  fib.db  game_of_life.bf  game_of_life.db
src/: main.rs
src/codegen/: mod.rs  quads.rs
src/compile/: mod.rs
src/interp/: full_tests.rs  mod.rs
src/ir/: allocator.rs  block_to_ir.rs  blockgen.rs  goto_elim.rs  mod.rs
src/optimizer/: big_nums.rs  mod.rs  zero_map.rs
src/parser/: .gitignore  ast.rs  mod.rs  parse.rs  structs.rs
